--- a/Normal_J6/src/main/resources/application.properties
+++ b/Normal_J6/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+#
+#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=HoLy_J5
+#spring.datasource.username=sa
+#spring.datasource.password=0907852396
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.hibernate.hbm2ddl.auto = validate
 
+spring.datasource.url=jdbc:mysql://localhost:3306/normal_j6
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
+spring.jpa.show-sql=true
