--- a/Normal_J6/pom.xml
+++ b/Normal_J6/pom.xml
@@ -63,10 +63,10 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		</dependency>-->
 
 			
 
