--- a/Normal_J6/src/main/resources/application.properties
+++ b/Normal_J6/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.jpa.show-sql=true
 
 spring.servlet.multipart.max-file-size=128KB
 spring.servlet.multipart.max-request-size=128KB
+
+#setup endpoint manager
+management.endpoints.web.exposure.include=*
