--- a/Normal_J6/pom.xml
+++ b/Normal_J6/pom.xml
@@ -72,6 +72,10 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+          <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
 			
 <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 <dependency>
