khai báo mã đăng nhập gg & face trong aplication

--- a/Normal_J6/src/main/resources/application.properties
+++ b/Normal_J6/src/main/resources/application.properties
@@ -28,3 +28,11 @@ spring.servlet.multipart.max-request-size=128KB
 
 #setup endpoint manager
 management.endpoints.web.exposure.include=*
+
+#google
+spring.security.oauth2.client.registration.google.client-id=897533331287-1st0h111qm617dvcevfkb1li4gdl4nis.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+
+#Facebook
+spring.security.oauth2.client.registration.facebook.client-id=769961061117469
+spring.security.oauth2.client.registration.facebook.client-secret=a727d83074fd057d2238f926f571e137
