--- a/Normal_J6/src/main/resources/application.properties
+++ b/Normal_J6/src/main/resources/application.properties
@@ -22,9 +22,11 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 spring.jpa.show-sql=true
 
-
+logging.level.org.springframework.web: DEBUG
 spring.servlet.multipart.max-file-size=128KB
 spring.servlet.multipart.max-request-size=128KB
+spring.http.multipart.enabled=true
+
 
 #setup endpoint manager
 management.endpoints.web.exposure.include=*
