=))) mệt quá, học lộn ngành rồi

--- a/Normal_J6/src/main/resources/application.properties
+++ b/Normal_J6/src/main/resources/application.properties
@@ -26,6 +26,7 @@ logging.level.org.springframework.web: DEBUG
 spring.servlet.multipart.max-file-size=128KB
 spring.servlet.multipart.max-request-size=128KB
 spring.http.multipart.enabled=true
+server.tomcat.relaxed-query-chars= {,}
 
 
 #setup endpoint manager
